--- a/style.css
+++ b/style.css
@@ -62,11 +62,11 @@
     height: auto;
 }
 
-#note-display pre::after{
+/* #note-display pre::after{
     content: 'run code';
     padding: 0.5rem;
     border:1px solid #ccc
-}
+} */
 
 
 .dragging{
