--- a/style.css
+++ b/style.css
@@ -40,9 +40,12 @@
 
 @media (max-width: 576px) {
     .badge{
-        
-        width: 10px !important;
-        height: 10px !important;
+        padding-right: 0.0rem !important;
+        padding-left: 0.0rem !important;
+        padding-top: 0.1rem !important;
+        padding-bottom: 0.1rem !important;
+        width: 0.5rem !important;
+        height: 0.25rem !important;
         overflow: hidden !important;
         color: transparent !important;
 
