--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     animation:moveup 0.15s ease-in;
 }
 .animate-down{
-    animation: moveup 0.15s ease-in;
+    animation: moveup 0.15s ease-out;
     animation-direction: reverse;
 }
 .calendar-event{
@@ -88,7 +88,7 @@
     
     }
     100%{
-        transform: translateY(0%) ;
+        transform: translateY(0%) rotateX(0deg);
     }
     
 }
