--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@
     border-radius: var(--bs-border-radius-sm);
 }
 .dropdown-start{
-    margin-left: -6rem;
+    transform: translateX(-100%);
+
 }
 #note-display img{
     width: 100%;
@@ -126,6 +127,8 @@
     padding: 0.5rem;
     border:1px solid #ccc
 } */
+
+
 
 
 .dragging{
