--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@
     width: 6rem;
 }
 
+.table{
+    width: 100% !important;
+    border-collapse: collapse !important;
+    border-spacing: 0 !important;  
+}
+
 .table td{
- padding: 1rem !important;
+ padding: 0.75rem !important;
  margin: 0 !important;
  display: table-cell !important;
  text-align: center !important;
