--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 
 }
 
-[data-bs-theme="dark"]{ 
+/* l[data-bs-theme="dark"]{ 
     --bs-body-color: #e8e8e8 !important ;
     --bs-body-color-rgb: 221,221,221;
     --bs-body-bg: #101112 !important;
     --bs-body-bg-rgb: 33,37,41;
 }
-
+ */
 
 
 
@@ -48,7 +48,7 @@
 }
 
 .selected{
-    box-shadow: inset 0 0 0 1px dodgerblue !important;
+    box-shadow: inset 0 0 0 1px var(--bs-primary) !important;
 }
 
 .text-body-secondary{
