--- a/style.css
+++ b/style.css
@@ -179,3 +179,39 @@ background-color: #10111256;
         
     }
 }
+.section-add{
+    position: relative;
+    cursor: pointer;
+    border: 1px solid var(--bs-primary);
+    border-radius: var(--bs-border-radius-sm);
+    padding: 0.125rem;
+    margin: 0.5rem 0;
+    transition: all 0.3s;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--bs-primary);
+    background-color: var(--bs-body-bg);
+    box-shadow: 0 0 0 1px var(--bs-primary);
+    z-index: 100;
+}
+
+.section-add::after{
+    content: 'Add Section';
+    position: absolute;
+    top: -0.5rem;
+
+    left: 50%;
+    transform: translateX(-50%) translateY(-20%);
+    
+    background-color: var(--bs-body-bg);
+    padding: 0.25rem;
+    border-radius: var(--bs-border-radius-sm);
+    color: var(--bs-primary);
+    font-size: 1rem;
+    font-weight: 700;
+    z-index: 100;
+}
