--- a/src/style.css
+++ b/src/style.css
@@ -230,3 +230,6 @@ background-color: #10111256;
 .list-group-item{ 
     color:var(--bs-list-group-color) !important;
 }
+.table td, .table th {
+    padding: 0.75rem !important;
+}
